--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.19.2",
     "mysql2": "^3.10.2",
     "sequelize": "^6.37.3"
   }
